<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44D6C8"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="311dp"
        android:layout_height="605dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:text="@string/app_title"
            android:textSize="34sp" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="302dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/list_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/list_title"
                    android:textSize="24sp" />

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:background="#00BCD4" />

            </LinearLayout>
        </ScrollView>

        <EditText
            android:id="@+id/edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:ems="10"
            android:hint="@string/edit_text_id"
            android:inputType="number" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_edit" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>