<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#299566"
    android:backgroundTint="@color/purple_200"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="584dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <EditText
            android:id="@+id/edit_text_game_id"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#000000"
            android:ems="10"
            android:hint="@string/edit_text_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_text_game_nome"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:backgroundTint="#000000"
            android:ems="10"
            android:hint="@string/edit_text_nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_text_game_preco"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:backgroundTint="#000000"
            android:ems="10"
            android:hint="@string/edit_text_preco"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_concluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#36C31D"
            android:onClick="onClickConcluir"
            android:text="@string/button_concluir" />

        <Button
            android:id="@+id/button_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:onClick="onClickCancelar"
            android:text="@string/button_cancelar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>